--- a/index/style_users.css
+++ b/index/style_users.css
@@ -161,9 +161,10 @@ small {
   #customers {
 	font-family: Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
-	width: 95%;
+	width: 80%;
 	margin: auto;
 	margin-top: 1%;
+	margin-left: 220px;
   }
   
   #customers td, #customers th {
