--- a/index/style_users.css
+++ b/index/style_users.css
@@ -118,7 +118,7 @@ small {
 	padding: 6px 8px 6px 16px;
 	text-decoration: none;
 	font-size: 20px;
-	color: #818181;
+	color: white;
 	display: block;
 	border: none;
 	background: none;
@@ -212,5 +212,4 @@ small {
 	background-color: #3A9CFF;
 	color: white;
   }
-
 
